imported gyro and completed updateBiases function

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = adafruit_feather_esp32s3
 framework = arduino
+lib_deps = 
+	sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
+	adafruit/Adafruit BMP3XX Library@^2.1.5
