--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_deps = 
 	sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
 	adafruit/Adafruit BMP3XX Library@^2.1.5
+	denyssene/SimpleKalmanFilter@^0.1.0
+	rfetick/Kalman@^1.1.0
