--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,11 @@ platform = espressif32
 board = adafruit_feather_esp32s3
 framework = arduino
 lib_deps = 
-	sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
 	adafruit/Adafruit BMP3XX Library@^2.1.5
-	denyssene/SimpleKalmanFilter@^0.1.0
+	tomstewart89/BasicLinearAlgebra@3.7
 	rfetick/Kalman@^1.1.0
+	denyssene/SimpleKalmanFilter@^0.1.0
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.6
+build_flags = 
+	-D ARDUINO_USB_MODE=0
+	-D ARDUINO_USB_CDC_ON_BOOT=1
