--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:adafruit_feather_esp32s3]
+[env:adafruit_qtpy_esp32s3_n4r2]
+platform = espressif32
+board = adafruit_qtpy_esp32s3_n4r2
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit BMP3XX Library@^2.1.5
+	rfetick/Kalman@^1.1.0
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.6
+	tomstewart89/BasicLinearAlgebra@3.7
+build_flags = 
+	-D ARDUINO_USB_MODE=0
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+
+[env:esp32_feather]
 platform = espressif32
 board = adafruit_feather_esp32s3
 framework = arduino
