--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_deps =
 	rfetick/Kalman@^1.1.0
 	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.6
 	tomstewart89/BasicLinearAlgebra@3.7
+	madhephaestus/ESP32Servo@^3.0.6
 build_flags = 
 	-D ARDUINO_USB_MODE=0
 	-D ARDUINO_USB_CDC_ON_BOOT=1
@@ -30,6 +31,7 @@ lib_deps =
 	rfetick/Kalman@^1.1.0
 	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.6
 	tomstewart89/BasicLinearAlgebra@3.7
+	madhephaestus/ESP32Servo@^3.0.6
 build_flags = 
 	-D ARDUINO_USB_MODE=0
 	-D ARDUINO_USB_CDC_ON_BOOT=1
